# chainfix

./: LICENSE  LICENSE.txt  README.md  codecov.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish-to-test-pypi.yml  tox.yml
docs/logo/: chainfix_logo.tiff
src/chainfix/: __init__.py  binary.py  context.py  decimal.py  fixed_point.py  helpers.py
tests/: test_fix.py
