[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=chainfix
version = attr: chainfix.__version__
author=PyDefi Development Team
author_email=clamdad@protonmail.com
description= Fixed-point data types for signal processing and blockchain applications
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/pydefi/chainfix
license_files = LICENSE.txt
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license=Modified BSD
keywords=
    fixed-point
    binary fixed-point
    decimal fixed-point

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
